More efforts to fix horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ body {
     li {
         max-width: 85ch;
     }
+
+    img {
+        max-width: 95%;
+    }
 }
 
 /* Page layout for small devices */
@@ -73,10 +77,6 @@ body {
     li {
         padding-left: 0.5em;
         padding-right: 0.5em;
-    }
-
-    a {
-        word-break: break-all;
     }
 
     img {
@@ -131,6 +131,10 @@ a, p {
     font-family: 'EB Garamond', serif;
     font-size: 1.4rem;
     line-height: 2rem;
+}
+
+a {
+    word-break: break-all;
 }
 
 li {
